Changing tabs to spaces

--- a/packages/wisptools:interaction/client/template.html
+++ b/packages/wisptools:interaction/client/template.html
@@ -1,4 +1,8 @@
 <template name="wtInteractionInputField">
-	{{title}} 
-	{{> editableText options}}
+  {{title}} 
+  {{> editableText options}}
+</template>
+
+<template name="wtInteractionSalesQuestionsOne">
+
 </template>
