Fixed the select box value saving, and recognises plain array as options

--- a/packages/wisptools:autoform-select-other/autoform_select_other.html
+++ b/packages/wisptools:autoform-select-other/autoform_select_other.html
@@ -1,5 +1,4 @@
 <template name="afSelectOther">
-  {{log}}
   <div class="row">
     <div class="col-xs-6">
       <select {{atts}}>
@@ -18,7 +17,7 @@
       </select>
     </div>
     <div class="col-xs-6">
-      <input type="text" placeholder="Other" oid={{inputbox}} value="{{inputboxvalue}}" {{atts}}/>
+      <input type="text" placeholder="Other" class="form-control" id={{inputbox}} value="{{inputboxvalue}}" />
     </div>
   </div>
 </template>
