--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -1,21 +1,55 @@
 <template name='wtManagedRouterMySQLList'>
-  <table class="table table-striped">
-    <thead>
-      <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Manage</th></tr>
-    </thead>
-    <tbody>
-      {{#each routers}}
-        <tr>
-          <td>{{SubscriberName}}</td>
-          <td>{{SerialNumber}}</td>
-          <td>{{MACAddress}}</td>
-          <td>{{Make}}</td>
-          <td>{{Model}}</td>
-          <td>
-            <a href="{{url}}" target="_blank">View Router</a>
-          </td>
-        </tr>
-      {{/each}}
-    </tbody>
-  </table>
+  <div class="row" style="padding-bottom: 15px;">
+    <div class="col-xs-12">
+      <form class="form-inline mr-search">
+        <div class="form-group" style="width: 50%;">
+          <label class="sr-only" for="search-str">Search for Router</label>
+          <input type="text" class="form-control" id="search-str" placeholder="Name, MAC Address or Serial Number" style="width: 100%;">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
+    </div>
+  </div>
+  <div class="row" style="padding-bottom: 15px;">
+    <div class="col-xs-12">
+      <form class="form-inline mr-add">
+        <div class="form-group">
+          <label class="sr-only" for="search-str">Customer</label>
+          <input type="text" class="form-control" id="customer" placeholder="Name">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="serial">Serial Number</label>
+          <input type="text" class="form-control" id="serial" placeholder="Serial Number RNV...">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="mac">MAC Address</label>
+          <input type="text" class="form-control" id="mac" placeholder="MAC 0019F...">
+        </div>
+        <button type="submit" class="btn btn-default">Add</button>
+      </form>
+    </div>
+  </div>
+  <div class="row" style="padding-bottom: 15px;">
+    <div class="col-xs-12">
+      <table class="table table-striped">
+        <thead>
+          <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Manage</th></tr>
+        </thead>
+        <tbody>
+          {{#each routers}}
+            <tr>
+              <td>{{SubscriberName}}</td>
+              <td>{{SerialNumber}}</td>
+              <td>{{MACAddress}}</td>
+              <td>{{Make}}</td>
+              <td>{{Model}}</td>
+              <td>
+                <a href="{{url}}" target="_blank">View Router</a>
+              </td>
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </div>
 </template>
