--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -12,44 +12,43 @@
   </div>
   <div class="row" style="padding-bottom: 15px;">
     <div class="col-xs-12">
-      <form class="form-inline mr-add">
-        <div class="form-group">
-          <label class="sr-only" for="search-str">Customer</label>
-          <input type="text" class="form-control" id="customer" placeholder="Name">
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="serial">Serial Number</label>
-          <input type="text" class="form-control" id="serial" placeholder="Serial Number RNV...">
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="mac">MAC Address</label>
-          <input type="text" class="form-control" id="mac" placeholder="MAC 0019F...">
-        </div>
-        <button type="submit" class="btn btn-default">Add</button>
-      </form>
-    </div>
-  </div>
-  <div class="row" style="padding-bottom: 15px;">
-    <div class="col-xs-12">
-      <table class="table table-striped">
-        <thead>
-          <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Manage</th></tr>
-        </thead>
-        <tbody>
-          {{#each routers}}
+      <form class="mr-add">
+        <table class="table table-striped">
+          <thead>
+            <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Manage</th></tr>
+          </thead>
+          <tbody>
+            {{#each routers}}
+              <tr>
+                <td>{{SubscriberName}}</td>
+                <td>{{SerialNumber}}</td>
+                <td>{{MACAddress}}</td>
+                <td>{{Make}}</td>
+                <td>{{Model}}</td>
+                <td>
+                  <a href="{{url}}" target="_blank">View Router</a>
+                </td>
+              </tr>
+            {{/each}}
             <tr>
-              <td>{{SubscriberName}}</td>
-              <td>{{SerialNumber}}</td>
-              <td>{{MACAddress}}</td>
-              <td>{{Make}}</td>
-              <td>{{Model}}</td>
               <td>
-                <a href="{{url}}" target="_blank">View Router</a>
+                <input type="text" class="form-control" id="customer" placeholder="Name">
+              </td>
+              <td>
+                <input type="text" class="form-control" id="serial" placeholder="Serial Number RNV...">
+              </td>
+              <td>
+                <input type="text" class="form-control" id="mac" placeholder="MAC 0019F...">
+              </td>
+              <td></td>
+              <td></td>
+              <td>
+                <button type="submit" class="btn btn-default">Add</button>
               </td>
             </tr>
-          {{/each}}
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </form>
     </div>
   </div>
 </template>
