adding rest api

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -20,11 +20,11 @@
           <tbody>
             {{#each routers}}
               <tr>
-                <td>{{SubscriberName}}</td>
-                <td>{{SerialNumber}}</td>
-                <td>{{MACAddress}}</td>
-                <td>{{Make}}</td>
-                <td>{{Model}}</td>
+                <td>{{name}}</td>
+                <td>{{serial}}</td>
+                <td>{{mac}}</td>
+                <td>{{make}}</td>
+                <td>{{model}}</td>
                 <td>
                   <a href="{{url}}" target="_blank">View Router</a>
                 </td>
