--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -19,24 +19,24 @@
           </thead>
           <tbody>
             {{#each routers}}
-              <tr>
+              <tr style="height: 55px;">
                 <td class="routerName">
                   {{#if editingName}}
-                    <input type="text" id="editName" value="{{name}}">
+                    <input class="form-control" type="text" id="editName" value="{{name}}">
                   {{else}}
                     {{name}}
                   {{/if}}
                 </td>
                 <td class="routerSerial">
                   {{#if editingSerial}}
-                    <input type="text" id="editSerial" value="{{serial}}">
+                    <input class="form-control input-xs" type="text" id="editSerial" value="{{serial}}">
                   {{else}}
                     {{serial}}
                 {{/if}}
                 </td>
                 <td class="routerMac">
                   {{#if editingMac}}
-                    <input type="text" id="editMac" value="{{mac}}">
+                    <input class="form-control input-xs" type="text" id="editMac" value="{{mac}}">
                   {{else}}
                     {{mac}}
                   {{/if}}
