--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -13,6 +13,7 @@
   <div class="row" style="padding-bottom: 15px;">
     <div class="col-xs-12">
       <form class="mr-add">
+        <div class="table-responsive">
         <table class="table table-striped">
           <thead>
             <tr><th>Customer</th><th>Serial Number</th><th>MAC</th><th>Make</th><th>Model</th><th>Manage</th></tr>
@@ -44,7 +45,8 @@
                 <td>{{make}}</td>
                 <td>{{model}}</td>
                 <td>
-                  <a href="{{url}}" target="_blank">View Router</a>
+                  <a class="btn btn-default btn-sm" href="{{url}}" target="_blank">View Router</a>
+                  <a href="#" class="delete text-danger"><i class="fa fa-times"></i></a>
                 </td>
               </tr>
             {{/each}}
@@ -66,6 +68,7 @@
             </tr>
           </tbody>
         </table>
+      </div>
       </form>
     </div>
   </div>
