Issues solved: 1) Incorrect Serial Length. 2) Removed search result after each update. Now, the whole routerList is displayed after editing. 3) Moved the delete button to the right.
Task Remaining: I was unable to complete the delete button and undo button events. I will be complete it as soon as possible in the next shift.

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -46,9 +46,9 @@
                 <td>{{model}}</td>
                 <td>
                   <a class="btn btn-default btn-sm" href="{{url}}" target="_blank">View Router</a>
-                  <a href="#" class="removeRouter btn btn-danger btn-sm" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
-                    <i class="fa fa-times"></i>
-                  </a>
+                    <a href="#" class="removeRouter btn btn-danger btn-sm pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
+                    <i class="fa fa-times"></i>  
+                    </a>
                 </td>
               </tr>
             {{/each}}
