Reduced button size for delete and restore

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -35,7 +35,7 @@
                   <td><strike>{{model}}</strike></td>
                   <td>
                     <a class="btn btn-default btn-sm" href="{{url}}" target="_blank">View Router</a>
-                    <a href="#" class="restoreRouter btn btn-warning btn-sm pull-right">
+                    <a href="#" class="restoreRouter btn btn-warning btn-xs pull-right">
                       <i class="fa fa-undo"></i>  
                     </a>
                   </td>
@@ -63,7 +63,7 @@
                   <td>{{model}}</td>
                   <td>
                     <a class="btn btn-default btn-sm" href="{{url}}" target="_blank">View Router</a>
-                    <a href="#" class="removeRouter btn btn-danger btn-sm pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
+                    <a href="#" class="removeRouter btn btn-danger btn-xs pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
                       <i class="fa fa-times"></i>  
                     </a>
                   </td>
