--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -34,7 +34,7 @@
                   <td><strike>{{make}}</strike></td>
                   <td><strike>{{model}}</strike></td>
                   <td>
-                    <a class="btn btn-default btn-sm" href="{{url}}" target="_blank">View Router</a>
+                    <a class="btn btn-default btn" href="{{url}}" target="_blank">View Router</a>
                     <a href="#" class="restoreRouter btn btn-warning btn-xs pull-right">
                       <i class="fa fa-undo"></i>  
                     </a>
