Updated CSS, changed button

--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -62,7 +62,7 @@
                   <td>{{model}}</td>
                   <td>
                     <a class="btn btn-default btn-sm addtomodal" href="{{url}}" target="_blank">View Router</a>
-                    <a href="#" class="removeRouter btn btn-danger btn-xs pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
+                    <a href="#" class="removeRouter btn btn-default btn-xs pull-right" id="removeBtn{{id}}" data-toggle="modal" data-target="#myModal" >
                       <i class="fa fa-times"></i>  
                     </a>
                   </td>
