--- a/packages/wisptools:managed-router-mysql/client/managedomains.html
+++ b/packages/wisptools:managed-router-mysql/client/managedomains.html
@@ -1,4 +1,35 @@
 <template name="wtManagedRouterMySQLManageDomains">
+    <div class="bg-secondary app-page">
+        <div class="container">
+            <table class="table table-hover">
+                <tbody>
+                    <tr>
+                        <th>Domain</th>
+                        <th>Action</th>
+                    </tr>
+                    {{#each domainList}}
+                    <tr>
+                        <td>
+                        </td>
+                        <td>
+                            {{> wtManagedRouterMySQLManageDomain}}
+                        </td>
+                    </tr>
+                    {{/each}}
+                    <tr>
+                        <td>
+                            <input type="text" id="domainname" class="form-control">
+                        </td>
+                        <td>
+                            <button class="btn btn-primary btn-xs addDomainbtn">Add Domain</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </template>
 
-
+<template name="wtManagedRouterMySQLManageDomain">
+  <input class="form-control mr-domain" type="checkbox" value="">
+</template>
