--- a/packages/wisptools:managed-router-mysql/client/domains.html
+++ b/packages/wisptools:managed-router-mysql/client/domains.html
@@ -19,24 +19,28 @@
             <th>User</th>
             <th>Domain</th>
           </tr>
-          {{#each userList}}
-          <tr>
-            <td style="width:50%">
-              {{username}}
-              {{#each emails}}
+          {{#if userList.count}}
+            {{#each userList}}
+            <tr>
+              <td style="width:50%">
+                {{username}}
+                {{#each emails}}
                 {{address}}
-              {{/each}}
-              {{services.google.email}}
-            </td>
-            <td class="domain-name"  style="width:50%">
-              {{#if changeDomain}}
+                {{/each}}
+                {{services.google.email}}
+              </td>
+              <td class="domain-name"  style="width:50%">
+                {{#if changeDomain}}
                 {{> wtManagedRouterMySQLDomain user=_id}}
-              {{else}}
+                {{else}}
                 {{domainName}}
-              {{/if}}
-            </td>
-          </tr>
-          {{/each}}
+                {{/if}}
+              </td>
+            </tr>
+            {{/each}}
+          {{else}}
+            <tr><td>Domain not assigned.</td></tr>
+          {{/if}}
         </tbody>
       </table>
     </div>
