--- a/packages/wisptools:managed-router-mysql/client/domains.html
+++ b/packages/wisptools:managed-router-mysql/client/domains.html
@@ -39,7 +39,7 @@
             </tr>
             {{/each}}
           {{else}}
-            <tr><td>Domain not assigned.</td></tr>
+            <tr><td>No users with selected domain.</td></tr>
           {{/if}}
         </tbody>
       </table>
