--- a/packages/wisptools:managed-router-mysql/client/domains.html
+++ b/packages/wisptools:managed-router-mysql/client/domains.html
@@ -33,7 +33,7 @@
                 {{#if changeDomain}}
                 {{> wtManagedRouterMySQLDomain user=_id}}
                 {{else}}
-                {{domainName}}<span style="padding-left:10px; color:#A0A0A0; display:none;" class="pull-right"><i class="fa fa-pencil fa-1" aria-hidden="true"></i></span>
+                {{domainName}}<span class="pull-right edit-field-indicator"><i class="fa fa-pencil fa-1" aria-hidden="true"></i></span>
                 {{/if}}
               </td>
             </tr>
