--- a/packages/wisptools:managed-router-mysql/client/list.html
+++ b/packages/wisptools:managed-router-mysql/client/list.html
@@ -45,7 +45,8 @@
                     {{#if editingName}}
                       <input class="form-control" type="text" id="editName" value="{{name}}">
                     {{else}}
-                    {{name}}<span class="pull-right edit-field-indicator"><i class="fa fa-pencil fa-1" aria-hidden="true"></i></span>
+                      {{name}}
+                      {{> wtEditableIcon}}
                     {{/if}}
                   </td>
                   <td class="routerSerial">
@@ -55,7 +56,8 @@
                     {{#if editingMac}}
                       <input class="form-control input-xs" type="text" id="editMac" value="{{mac}}">
                     {{else}}
-                    {{mac}}<span class="pull-right edit-field-indicator"><i class="fa fa-pencil fa-1" aria-hidden="true"></i></span>
+                      {{mac}}
+                      {{> wtEditableIcon}}
                     {{/if}}
                   </td>
                   <td>{{make}}</td>
