Create domain during account creation
1. If the domain does not exist, a new domain is created during account creation.
2. If the domain exist, proper message is shown.
3. Added external labels to each field.
4. Changed "Domain" to "Your Domain".
5. Auto fill the "Your Domain" field based on the domain used in the email.

--- a/packages/wisptools:accounts-ui-bootstrap-3/login_buttons_dropdown.html
+++ b/packages/wisptools:accounts-ui-bootstrap-3/login_buttons_dropdown.html
@@ -159,7 +159,10 @@
 		{{/if}}
 
 		{{#if inputTextual}}
+		<div class="form-group">
+			<label for="login-{{fieldName}}">{{fieldLabel}}</label>
 			<input id="login-{{fieldName}}" type="{{inputType}}" placeholder="{{fieldLabel}}" class="form-control" />
+		</div>
 		{{/if}}
 	{{/if}}
 </template>
@@ -172,4 +175,3 @@
 	<button class="btn btn-block btn-primary" id="login-buttons-do-change-password">{{i18n 'loginButtonsChangePassword.submit'}}</button>
 	<button class="btn btn-block btn-default" id="login-buttons-cancel-change-password">{{i18n 'loginButtonsChangePassword.cancel'}}</button>
 </template>
-
