improving api docs

--- a/packages/wisptools:managed-router-mysql/client/api-docs-add.html
+++ b/packages/wisptools:managed-router-mysql/client/api-docs-add.html
@@ -5,7 +5,7 @@ New devices are added by doing a `"post"` to `/mr/add`.  You'll get the newly ad
 it conflicts with an existing device. 
 
 ```http
-POST /mr/add
+POST https://api.rncontrol.com/mr/add
 ```
 
 Sample post data
