--- a/packages/wisptools:managed-router-mysql/client/api-docs-delete.html
+++ b/packages/wisptools:managed-router-mysql/client/api-docs-delete.html
@@ -5,7 +5,7 @@ Device can be deleted by doing a `"post"` to `/mr/delete`.  You'll get the delet
 any conflict occurs. 
 
 ```http
-POST /mr/delete
+POST https://api.rncontrol.com/mr/delete
 ```
 
 Sample post data
