--- a/packages/wisptools:managed-router-mysql/client/api-docs-reserve.html
+++ b/packages/wisptools:managed-router-mysql/client/api-docs-reserve.html
@@ -6,7 +6,7 @@ A serial number reservation is a method for a privilaged user to set aside seria
 Users with `admin` or `reseller` previlages can reserve a serial number, by doing a `"post"` to `/mr/reserve`.  The `result` of `success` means the serial number reservation was properly added or updated in the database, anything else is a failure.  You'll get a `result` on each serial number passed in.
 
 ```http
-POST /mr/reserve
+POST https://api.rncontrol.com/mr/reserve
 ```
 
 Sample post data
