adding free router details page

--- a/packages/wisptools:free-router/client/list.html
+++ b/packages/wisptools:free-router/client/list.html
@@ -39,7 +39,7 @@
         </thead>
         <tbody>
           {{#each items}}
-            <tr data-id="{{_id}}" class="wt-free-router-row">
+            <tr data-id="{{_id}}" class="wt-free-router-row clickable">
               <td>{{name}}</td>
               <td>{{company}}</td>
               <td>{{relativeTime createdAt}}</td>
